GNOME Bugzilla – Bug 728958
tui: fix route editing
Last modified: 2014-04-29 17:12:42 UTC
NmtRouteTable's ip4-routes and ip6-routes properties have the D-Bus-based route list types (like the corresponding NMSetting properties) so we have to convert our GSList-of-NMIP[46]Route data into those types when updating the property.
Created attachment 275139 [details] [review] tui: fix route editing (rh #1090422)
Looks good to me, and correctly saves the entered route to NM such that it's viewable with 'nmcli con show <uuid>' as the check.
Attachment 275139 [details] pushed as 7f5b2f8 - tui: fix route editing (rh #1090422)